# EyeMotion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MOBILE_ENV_SETUP.md  README.md  README_ZH.md  build.rs  build_all.ps1  local_env.ps1  multi_platform.md  package-lock.json  package.json  patch_config.js  restore_config.js  tsconfig.json  vite.config.ts  使用说明.md  使用说明.txt
.github/workflows/: build.yml  release.yml
eyemotion-core/: Cargo.toml
eyemotion-core/src/: audio_config.rs  ball.rs  config.rs  error.rs  events.rs  game_state.rs  lib.rs  stage_config.rs  visual_config.rs
publish/: README.md
src/: config.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
ui/: index.html
ui/assets/: README.md
ui/css/: style.css
ui/js/: audio.js  audio.ts  bridge.ts  game.js  game.ts  i18n.js  i18n.ts  input.js  input.ts  main.js  renderer.js  renderer.ts  virtual-controls.js  virtual-controls.ts
ui/locales/: en.json  zh-Hans.json  zh-Hant.json
