[package]
name = "eyemotion"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
eyemotion-core = { path = "../eyemotion-core" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
